--- a/todo/templates/todo/index.html
+++ b/todo/templates/todo/index.html
@@ -27,24 +27,8 @@
                 {% csrf_token %}
                 <div class="text">
                     <textarea name="sprig" cols="50" rows="10">
-ドレスドオムライス完成] 葉など飾る
-    成形したチキンライスに卵ドレスを乗せる
-        チキンライスを茶碗で成形して皿に盛る
-            チキンライス完成] コンソメとケチャップで調味
-                ごはんと鶏肉をフライパンに入れて炒める
-                    冷凍ごはんを戻す
-                    冷凍ボイル鶏肉を戻す
-                    たまねぎが透けるまで炒める
-                        たまねぎをフライパンへ
-                            たまねぎをみじん切りに
-                            フライパンにバター
-        ドレープをつけ卵ドレスを作る
-            卵液をフライパンへ
-                卵に水溶き片栗粉を加える
-                    ボウルに卵をとく
-                フライパンにバター
-                    フライパンをキレイに [チキンライス完成
-                    </textarea>
+head_link] task1 :30- <h5m30> -16:00 @8888 subtitle
+    task2 /27- <d2h4> -/3 @7777 [tail_link subtitle</textarea>
                 </div>
                 <!-- ToDo追加ボタン -->
                 <div class="form-group">
@@ -64,7 +48,11 @@
                             <td>
                                 <a href="#" class="todo" onfocus="on_focus(this)" onblur="on_blur(this)">
                                     <div class="message">{{ task.title }}</div>
+                                    <div>着手{{ task.start }}</div>
+                                    <div>所要{{ task.expected_time }}</div>
+                                    <div>実績{{ task.actual_time }}</div>
                                     <div>期限{{ task.deadline }}</div>
+                                    <div>依頼者{{ task.client }}</div>
                                 </a>
                             </td>
                             <td>
