h5m30のような入力作法を5h30mのように変更

--- a/todo/templates/todo/index.html
+++ b/todo/templates/todo/index.html
@@ -27,8 +27,8 @@
                 {% csrf_token %}
                 <div class="text">
                     <textarea name="sprig" cols="50" rows="10">
-head_link] task1 :30- <h5m30> -16:00 @8888 subtitle
-    task2 /27- <d2h4> -/3 @7777 [tail_link subtitle</textarea>
+head_link] task1 :30- <5h30m> -16:00 @8888 subtitle
+    task2 /27- <2d4h> -/3 @7777 [tail_link subtitle</textarea>
                 </div>
                 <!-- ToDo追加ボタン -->
                 <div class="form-group">
