タスクのnote属性の処理を追加 各属性の表示をflexで横並びにした

--- a/todo/static/css/todo.css
+++ b/todo/static/css/todo.css
@@ -24,3 +24,11 @@ td {
     color: #a52a2a;
     background: #ffc0cb;
 }
+
+.flex{
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+}
