--- a/todo/static/css/todo.css
+++ b/todo/static/css/todo.css
@@ -41,3 +41,13 @@ td {
     margin-left: 5px;
     margin-right: 5px;
 }
+
+.out_tasks{
+    padding-left: 0px;
+}
+.me{
+    padding-left: 30px;
+}
+.in_tasks{
+    padding-left: 60px;
+}
