--- a/todo/templates/todo/register.html
+++ b/todo/templates/todo/register.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>タスク管理アプリ</title>
+        <title>Sprig</title>
             <meta charset="utf-8">
             <!-- CDN CSS(Karma CSS)
             https://karmacss.com/en/latest/installation.html -->
@@ -21,7 +21,7 @@
         <div id="messageAlt"></div>
         <!-- 固定枠 -->
         <div class="container">
-            <h2 id="title1">ToDoリスト</h2>
+            <h2 id="title1">Sprig</h2>
             <!-- ToDoアプリ Post処理 -->
             <form action="{% url 'add' %}" method="post" name="form1">
                 {% csrf_token %}
