--- a/todo/templates/todo/index.html
+++ b/todo/templates/todo/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>タスク管理アプリ</title>
+        <title>Sprig</title>
             <meta charset="utf-8">
             <!-- CDN CSS(Karma CSS)
             https://karmacss.com/en/latest/installation.html -->
@@ -21,70 +21,67 @@
         <div id="messageAlt"></div>
         <!-- 固定枠 -->
         <div class="container">
-            <h2 id="title1">ToDoリスト</h2>
-            <!-- Todoリスト表示 -->
-            <table class="todo list table">
-                <tbody>
-                    <!-- 新規登録ボタン -->
-                    <form action="{% url 'register' %}" method="post">
-                        {% csrf_token %}
-                        <button class="button">新規登録</button>
-                    </form>
-                    <!-- すべて表示ボタン -->
-                    <form action="{% url 'index' %}" method="post">
-                        {% csrf_token %}
-                        <button class="button">すべて表示</button>
-                    </form>
-                    <!-- 最終タスク表示ボタン -->
-                    <form action="{% url 'show_trunk' %}" method="post">
-                        {% csrf_token %}
-                        <button class="button">最終タスク表示</button>
-                    </form>
-                    <!-- 初動タスク表示ボタン -->
-                    <form action="{% url 'show_buds' %}" method="post">
-                        {% csrf_token %}
-                        <button class="button">初動タスク表示</button>
-                    </form>
-                    <!-- for文回してtodoを取得、表示 -->
-                    {% for key, tasks in taskss.items %}
-                        {% for task in tasks %}
-                            <tr>
-                                <td class="{{ key }}">
-                                    <a href="#" class="todo" onfocus="on_focus(this)" onblur="on_blur(this)">
-                                        <div class="message">{{ task.title }}</div>
-                                        <div class="flex fft">
-                                            <span class="mg">by</span>
-                                            <div class="number">{{ task.deadline|date:"Y-m-d D H:i:s" }}</div>
-                                            <span class="mg">(</span>
-                                            <div class="number">{{ task.actual_time }}</div>
-                                            <span class="mg">/</span>
-                                            <div class="number">{{ task.expected_time }}</div>
-                                            <span class="mg">)</span>
-                                            <span class="mg">@</span>
-                                            <div>{{ task.client }}</div>
-                                            <span class="mg">"</span>
-                                            <div>{{ task.note }}</div>
-                                            <span class="mg">"</span>
-                                        </div>
-                                    </a>
-                                </td>
-                                <td>
-                                    <form action="{% url 'show_around_1' task.id %}" method="post">
-                                        {% csrf_token %}
-                                        <button class="button">これ中心</button>
-                                    </form>
-                                </td>
-                                <td>
-                                    <form action="{% url 'delete' task.id %}" method="post" class="del_todo">
-                                        {% csrf_token %}
-                                        <button class="button del">削除</button>
-                                    </form>
-                                </td>
-                            </tr>
-                        {% endfor %}
+            <h2 id="title1">Sprig</h2>
+            <!-- メニューボタン群 -->
+            <div class="controller flex">
+                <!-- 新規登録ボタン -->
+                <form action="{% url 'register' %}" method="post">
+                    {% csrf_token %}
+                    <button class="button">新規登録</button>
+                </form>
+                <!-- すべて表示ボタン -->
+                <form action="{% url 'index' %}" method="post">
+                    {% csrf_token %}
+                    <button class="button">すべて表示</button>
+                </form>
+                <!-- 最終タスク表示ボタン -->
+                <form action="{% url 'show_trunk' %}" method="post">
+                    {% csrf_token %}
+                    <button class="button">最終タスク表示</button>
+                </form>
+                <!-- 初動タスク表示ボタン -->
+                <form action="{% url 'show_buds' %}" method="post">
+                    {% csrf_token %}
+                    <button class="button">初動タスク表示</button>
+                </form>
+            </div>
+            <div class="tasks">
+                <!-- for文回してtodoを取得、表示 -->
+                {% for key, tasks in taskss.items %}
+                    {% for task in tasks %}
+                        <div class="row">
+                            <a href="#" class="todo" onfocus="on_focus(this)" onblur="on_blur(this)">
+                                <div class="task {{ key }}">
+                                    <div class="title">{{ task.title }}</div>
+                                    <div class="attr flex fft">
+                                        <span class="mg">by</span>
+                                        <div class="number">{{ task.deadline|date:"Y-m-d D H:i:s" }}</div>
+                                        <span class="mg">(</span>
+                                        <div class="number">{{ task.actual_time }}</div>
+                                        <span class="mg">/</span>
+                                        <div class="number">{{ task.expected_time }}</div>
+                                        <span class="mg">)</span>
+                                        <span class="mg">@</span>
+                                        <div>{{ task.client }}</div>
+                                    </div>
+                                </div>
+                            </a>
+                            <!--フォーカスボタン-->
+                            <a href="{% url 'show_around_1' task.id %}">
+                                <div class="row_menu focus flex">Focus</div>
+                            </a>
+                            <!--困難を分割ボタン-->
+                            <a href="{% url 'breakdown' task.id %}">
+                                <div class="row_menu breakdown flex">B.Down</div>
+                            </a>
+                            <!--削除ボタン-->
+                            <a href="{% url 'delete' task.id %}">
+                                <div class="row_menu done flex">Done</div>
+                            </a>
+                        </div>
                     {% endfor %}
-                </tbody>
-            </table>
+                {% endfor %}
+            </div>
         </div>
         <!-- static配下のJSファイルを参照 -->
         <script type="text/javascript" src="{% static 'js/todo.js' %}"></script>
