--- a/todo/templates/todo/index.html
+++ b/todo/templates/todo/index.html
@@ -53,7 +53,7 @@
                             <a href="#" class="todo" onfocus="on_focus(this)" onblur="on_blur(this)">
                                 <div class="task {{ key }}">
                                     <div class="title">{{ task.title }}</div>
-                                    <div class="attr flex fft">
+                                    <div class="attr flex">
                                         <span class="mg">by</span>
                                         <div class="number">{{ task.deadline|date:"Y-m-d D H:i:s" }}</div>
                                         <span class="mg">(</span>
