--- a/todo/templates/todo/index.html
+++ b/todo/templates/todo/index.html
@@ -47,39 +47,49 @@
             </div>
             <div class="tasks">
                 <!-- for文回してtodoを取得、表示 -->
-                {% for key, tasks in taskss.items %}
-                    {% for task in tasks %}
-                        <div class="row">
-                            <a href="#" class="todo" onfocus="on_focus(this)" onblur="on_blur(this)">
-                                <div class="task {{ key }}">
-                                    <div class="title">{{ task.title }}</div>
-                                    <div class="attr flex">
-                                        <span class="mg">by</span>
-                                        <div class="number">{{ task.deadline|date:"Y-m-d D H:i:s" }}</div>
-                                        <span class="mg">(</span>
-                                        <div class="number">{{ task.actual_time }}</div>
-                                        <span class="mg">/</span>
-                                        <div class="number">{{ task.expected_time }}</div>
-                                        <span class="mg">)</span>
-                                        <span class="mg">@</span>
-                                        <div>{{ task.client }}</div>
-                                    </div>
-                                </div>
-                            </a>
-                            <!--フォーカスボタン-->
-                            <a href="{% url 'show_around_1' task.id %}">
-                                <div class="row_menu focus flex">Focus</div>
-                            </a>
-                            <!--困難を分割ボタン-->
-                            <a href="{% url 'breakdown' task.id %}">
-                                <div class="row_menu breakdown flex">B.Down</div>
-                            </a>
-                            <!--削除ボタン-->
-                            <a href="{% url 'delete' task.id %}">
-                                <div class="row_menu done flex">Done</div>
-                            </a>
+                {% for relationship, tasks in taskss.items %}
+                {% for task in tasks %}
+                <div class="row">
+                    <a href="#" class="todo" onfocus="on_focus(this)" onblur="on_blur(this)">
+                        {% if not task.is_done %}
+                        <div class="task {{ relationship }} undone">
+                        {% else %}
+                        <div class="task {{ relationship }} done">
+                        {% endif %}
+                            <div class="title">{{ task.title }}</div>
+                            <div class="attr flex">
+                                <span class="mg">by</span>
+                                <div class="number">{{ task.deadline|date:"Y-m-d D H:i:s" }}</div>
+                                <span class="mg">(</span>
+                                <div class="number">{{ task.actual_time }}</div>
+                                <span class="mg">/</span>
+                                <div class="number">{{ task.expected_time }}</div>
+                                <span class="mg">)</span>
+                                <span class="mg">@</span>
+                                <div>{{ task.client }}</div>
+                            </div>
                         </div>
-                    {% endfor %}
+                    </a>
+                    <!--フォーカスボタン-->
+                    <a href="{% url 'show_around_1' task.id %}">
+                        <div class="row_menu focus flex">Focus</div>
+                    </a>
+                    <!--困難を分割ボタン-->
+                    <a href="{% url 'breakdown' task.id %}">
+                        <div class="row_menu breakdown flex">B.Down</div>
+                    </a>
+                    <!--完了/未完了ボタン-->
+                    {% if not task.is_done %}
+                    <a href="{% url 'done' task.id %}">
+                        <div class="row_menu done flex">Done</div>
+                    </a>
+                    {% else %}
+                    <a href="{% url 'undone' task.id %}">
+                        <div class="row_menu undone flex">Undone</div>
+                    </a>
+                    {% endif %}
+                </div>
+                {% endfor %}
                 {% endfor %}
             </div>
         </div>
