--- a/todo/static/css/todo.css
+++ b/todo/static/css/todo.css
@@ -1,33 +1,63 @@
+body {
+    background: #fffcf9;
+}
 h2 {
     font-size: 50px;
     color: #000000;
     font-weight: 800;
     font-family: Impact;
 }
-body {
-    background: #fffcf9;
+.graph{
+    width: 400px;
+    height: 600px;
+    border: 1px solid red;
 }
-.task {
+.tasks{
+    width: 710px;
+}
+.task{
+    border-top: 1px solid white;
+}
+.task .description {
     width: 508px;
+    padding-left: 10px;
 }
-.task.undone{
-    background: #ffffcc;
-}
-.task.done{
-    background: #cccccc;
-}
-.task.me{
-    background: #ffff77;
-}
-.task .title {
+.task .description .title {
     height: 30px;
     font-size: 20px;
     font-weight: 600;
 }
-.task .attr {
+.task .description .attr {
     height: 30px;
     font-family: 'Monotype Corsiva', 'Courier New';
     font-size: 20px;
+}
+.task .menu {
+    width: 70px;
+    height: 60px;
+    display: table-cell;
+    text-align: center;
+    vertical-align: middle;
+}
+.done{
+    background: #cccccc;
+}
+.undone{
+    background: #ffffcc;
+}
+.focus{
+    background: #ccccff;
+}
+.undone .breakdown{
+    background: #ccffcc;
+}
+.undone .done{
+    background: #ffcccc;
+}
+
+
+.me{
+    background: #ffff77;
 }
 .button {
     color: #fa8072;
@@ -43,28 +73,6 @@ body {
 .mg{
     margin-left: 5px;
     margin-right: 5px;
-}
-.row{
-    border-top: 1px solid white;
-}
-.row_menu{
-    width: 70px;
-    height: 60px;
-    display: table-cell;
-    text-align: center;
-    vertical-align: middle;
-}
-.row_menu.focus{
-    background-color: #ccccff;
-}
-.row_menu.breakdown{
-    background-color: #ffcccc;
-}
-.row_menu.done{
-    background-color: #ccffcc;
-}
-.row_menu.undone{
-    background-color: #cccccc;
 }
 a{
     color: #999999;
