--- a/todo/templates/todo/index.html
+++ b/todo/templates/todo/index.html
@@ -21,76 +21,83 @@
         <div id="messageAlt"></div>
         <!-- 固定枠 -->
         <div class="container">
-            <h2 id="title1">Sprig</h2>
-            <!-- メニューボタン群 -->
-            <div class="controller flex">
-                <!-- 新規登録ボタン -->
-                <form action="{% url 'register' %}" method="post">
-                    {% csrf_token %}
-                    <button class="button">新規登録</button>
-                </form>
-                <!-- すべて表示ボタン -->
-                <form action="{% url 'index' %}" method="post">
-                    {% csrf_token %}
-                    <button class="button">すべて表示</button>
-                </form>
-                <!-- 最終タスク表示ボタン -->
-                <form action="{% url 'show_trunk' %}" method="post">
-                    {% csrf_token %}
-                    <button class="button">最終タスク表示</button>
-                </form>
-                <!-- 初動タスク表示ボタン -->
-                <form action="{% url 'show_buds' %}" method="post">
-                    {% csrf_token %}
-                    <button class="button">初動タスク表示</button>
-                </form>
-            </div>
-            <div class="tasks">
-                <!-- for文回してtodoを取得、表示 -->
-                {% for relationship, tasks in taskss.items %}
-                {% for task in tasks %}
-                <div class="row">
-                    <a href="#" class="todo" onfocus="on_focus(this)" onblur="on_blur(this)">
-                        {% if not task.is_done %}
-                        <div class="task {{ relationship }} undone">
-                        {% else %}
-                        <div class="task {{ relationship }} done">
-                        {% endif %}
-                            <div class="title">{{ task.title }}</div>
-                            <div class="attr flex">
-                                <span class="mg">by</span>
-                                <div class="number">{{ task.deadline|date:"Y-m-d D H:i:s" }}</div>
-                                <span class="mg">(</span>
-                                <div class="number">{{ task.actual_time }}</div>
-                                <span class="mg">/</span>
-                                <div class="number">{{ task.expected_time }}</div>
-                                <span class="mg">)</span>
-                                <span class="mg">@</span>
-                                <div>{{ task.client }}</div>
-                            </div>
-                        </div>
-                    </a>
-                    <!--フォーカスボタン-->
-                    <a href="{% url 'show_around_1' task.id %}">
-                        <div class="row_menu focus flex">Focus</div>
-                    </a>
-                    <!--困難を分割ボタン-->
-                    <a href="{% url 'breakdown' task.id %}">
-                        <div class="row_menu breakdown flex">B.Down</div>
-                    </a>
-                    <!--完了/未完了ボタン-->
-                    {% if not task.is_done %}
-                    <a href="{% url 'done' task.id %}">
-                        <div class="row_menu done flex">Done</div>
-                    </a>
-                    {% else %}
-                    <a href="{% url 'undone' task.id %}">
-                        <div class="row_menu undone flex">Undone</div>
-                    </a>
-                    {% endif %}
+            <div class="header">
+                <h2 id="title1">Sprig</h2>
+                <!-- メニューボタン群 -->
+                <div class="controller flex">
+                    <!-- 新規登録ボタン -->
+                    <form action="{% url 'register' %}" method="post">
+                        {% csrf_token %}
+                        <button class="button">新規登録</button>
+                    </form>
+                    <!-- すべて表示ボタン -->
+                    <form action="{% url 'index' %}" method="post">
+                        {% csrf_token %}
+                        <button class="button">すべて表示</button>
+                    </form>
+                    <!-- 最終タスク表示ボタン -->
+                    <form action="{% url 'show_trunk' %}" method="post">
+                        {% csrf_token %}
+                        <button class="button">最終タスク表示</button>
+                    </form>
+                    <!-- 初動タスク表示ボタン -->
+                    <form action="{% url 'show_buds' %}" method="post">
+                        {% csrf_token %}
+                        <button class="button">初動タスク表示</button>
+                    </form>
                 </div>
-                {% endfor %}
-                {% endfor %}
+            </div>
+            <div class="main flex">
+                <div class="graph">graph</div>
+                <div class="tasks">
+                    <!-- for文回してtodoを取得、表示 -->
+                    {% for relationship, tasks in taskss.items %}
+                    {% for task in tasks %}
+                    <div class="task flex {{ relationship }} {% if not task.is_done %}undone{% else %}done{% endif %}">
+                        <a href="#" onfocus="on_focus(this)" onblur="on_blur(this)">
+                            <div class="description">
+                                <div class="title mg">{{ task.title }}</div>
+                                <div class="attr flex">
+                                    <span class="mg">by</span>
+                                    <div class="number">{{ task.deadline|date:"Y-m-d D H:i:s" }}</div>
+                                    <span class="mg">(</span>
+                                    <div class="number">{{ task.actual_time }}</div>
+                                    <span class="mg">/</span>
+                                    <div class="number">{{ task.expected_time }}</div>
+                                    <span class="mg">)</span>
+                                    <span class="mg">@</span>
+                                    <div>{{ task.client }}</div>
+                                </div>
+                            </div>
+                        </a>
+                        <!--フォーカスボタン-->
+                        <a href="{% url 'show_around_1' task.id %}">
+                            <div class="menu focus">Focus</div>
+                        </a>
+                        <!--困難を分割ボタン-->
+                        {% if not task.is_done %}
+                        <a href="{% url 'breakdown' task.id %}">
+                            <div class="menu breakdown">B.Down</div>
+                        </a>
+                        {% else %}
+                        <a>
+                            <div class="menu breakdown">B.Down</div>
+                        </a>
+                        {% endif %}
+                        <!--完了/未完了ボタン-->
+                        {% if not task.is_done %}
+                        <a href="{% url 'done' task.id %}">
+                            <div class="menu done">Done</div>
+                        </a>
+                        {% else %}
+                        <a href="{% url 'undone' task.id %}">
+                            <div class="menu undone">Undone</div>
+                        </a>
+                        {% endif %}
+                    </div>
+                    {% endfor %}
+                    {% endfor %}
+                </div>
             </div>
         </div>
         <!-- static配下のJSファイルを参照 -->
