--- a/todo/static/css/todo.css
+++ b/todo/static/css/todo.css
@@ -21,19 +21,30 @@ body {
     width: 950px;
     text-align: right;
 }
-.graph{
+.fix{
     width: 400px;
     height: 600px;
+}
+#graph{
+    height: 400px;
     border: 1px solid red;
 }
-.tasks{
+#note{
+    height: 200px;
+    background: #cccccc;
+    overflow: auto;
+}
+#tasks{
     width: 710px;
+    height: 600px;
+    overflow: auto;
 }
 .task{
     border-top: 1px solid white;
+    height: 60px;
 }
 .task .description {
-    width: 508px;
+    width: 500px;
     padding-left: 10px;
 }
 .task .description .title {
@@ -45,6 +56,9 @@ body {
     height: 30px;
     font-family: 'Monotype Corsiva', 'Courier New';
     font-size: 20px;
+}
+.note{
+    display: none;
 }
 .menu {
     width: 70px;
