--- a/sprig/templates/sprig/index.html
+++ b/sprig/templates/sprig/index.html
@@ -10,7 +10,7 @@
 
             <!-- static配下のCSSファイルを参照 -->
             <link rel="stylesheet"
-            href="{% static 'css/todo.css' %}" >
+            href="{% static 'css/sprig.css' %}" >
 
     </head>
     <body>
@@ -97,6 +97,6 @@
             </div>
         </div>
         <!-- static配下のJSファイルを参照 -->
-        <script type="text/javascript" src="{% static 'js/todo.js' %}"></script>
+        <script type="text/javascript" src="{% static 'js/sprig.js' %}"></script>
     </body>
 </html>
